# Psychohistory-Engine

./: LICENSE  README.md  pyproject.toml
.kiro/specs/psychohistory-engine/: .config.kiro  design.md  requirements.md  tasks.md
psychohistory/: engine.py  enums.py  event_ingester.py  exceptions.py  explainability.py  extraction_pipeline.py  intervention_detector.py  models.py  pattern_analyzer.py  persistence.py  quantum_engine.py  serialization.py  trajectory_predictor.py  uncertainty.py
psychohistory/connectors/: archiveorg.py  base.py  wikipedia.py
tests/: conftest.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_event_ingester.py  test_explainability.py  test_extraction_pipeline.py  test_intervention_detector.py  test_pattern_analyzer.py  test_persistence.py  test_quantum_engine.py  test_serialization.py  test_trajectory_predictor.py  test_uncertainty.py
