[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "psychohistory-engine"
version = "0.1.0"
description = "A computational framework inspired by Asimov's psychohistory, combining historical data analysis, AI, and quantum computing."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Psychohistory Engine Team" }
]
keywords = ["psychohistory", "quantum", "machine-learning", "history", "prediction"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pennylane>=0.38",
    "qiskit>=1.0",
    "qiskit-aer",
    "pennylane-qiskit",
    "networkx>=3.0",
    "spacy>=3.0",
    "msgpack",
    "hypothesis>=6.0",
    "pytest",
    "sqlalchemy>=2.0",
    "apscheduler>=3.0",
    "requests",
    "wikipedia-api",
    "internetarchive",
    "numpy",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "hypothesis>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["psychohistory*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests (require external connectivity)",
    "quantum_hardware: marks tests that require real IBM Quantum hardware",
    "slow: marks tests as slow-running",
]
addopts = "-v --tb=short"

[tool.hypothesis]
max_examples = 100
